<resources>
    <string name="app_name">Deal Zone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nom Compte</string>
    <string name="nav_header_subtitle">adresse.compte@adresse.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Page d\'accueil</string>
    <string name="menu_hot">Les plus Hot du jour !</string>
    <string name="menu_sold">Réductions des comptes suivis</string>
    <string name="menu_categories">Catégories</string>

    <string name="navbuttondesc">navigation open</string>
    <string name="userbuttondesc">open user profile</string>
    <string name="_499">499$</string>
    <string name="_374">374$</string>
    <string name="casque_moto_shoei_nxr2_mm93_retro_tc_10_tailles_du_2xs_au_2xl">Casque Moto Shoei Nxr2 Mm93 Retro Tc-10 - Tailles du 2XS au 2XL</string>
    <string name="cosm_tique">Cosmétique</string>
    <string name="informatique">Informatique</string>
</resources>