<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/untitled_1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hot"
            android:icon="@drawable/hot"
            android:title="@string/menu_hot" />
        <item
            android:id="@+id/nav_sold"
            android:icon="@drawable/percentage_sign"
            android:title="@string/menu_sold" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/categories"
            android:title="@string/menu_categories" />
    </group>
</menu>



